RAI_Dog_0621/src/nohup.out
  File "Run.py", line 55
    print(f"Usage: python3 {sys.argv[0]} networkInterface")
                                                         ^
SyntaxError: invalid syntax
qt.qpa.xcb: could not connect to display localhost:10.0
qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "/home/gt/miniconda3/lib/python3.12/site-packages/cv2/qt/plugins" even though it was found.
This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.

Available platform plugins are: xcb.

